--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "six-electron",
+    "productName": "北斗微芯",
     "appId": "com.six.app",
     "directories": {
       "output": "build"
@@ -60,6 +60,7 @@
     "element-ui": "^2.4.11",
     "good-storage": "^1.1.0",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
@@ -120,6 +121,7 @@
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "svg-sprite-loader": "^4.1.3",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.2.4",
