--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
     "good-storage": "^1.1.0",
+    "leaflet": "^1.3.4",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "vue": "^2.5.16",
