--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.2.0-rc.2",
+    "echarts-gl": "^1.1.1",
     "element-ui": "^2.4.11",
     "good-storage": "^1.1.0",
     "leaflet": "^1.3.4",
