--- a/package.json
+++ b/package.json
@@ -64,9 +64,15 @@
     "leaflet": "^1.3.4",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "rbush": "^2.0.2",
+    "v-viewer": "^1.4.0",
+    "viewerjs": "^1.3.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
+    "vue-viewerjs": "^1.0.6",
+    "vue-waterfall": "^1.0.6",
+    "vue-waterfall-easy": "^2.4.3",
     "vuex": "^3.0.1",
     "vuex-electron": "^1.0.0"
   },
